--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Anton Skoromnyi</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <load src="./partials/header.html" />
-
     <main>
-      <load src="./partials/" />.svg#logo"
-      <load src="./partials/" />
+      <load src="./partials/hero.html" />
+      <load src="./partials/about-me.html" />
+      <load src="./partials/projects.html" />
+      <load src="./partials/tech-skills.html" />
+      <load src="./partials/faq.html" />
+      <load src="./partials/contacts.html" />
     </main>
-
     <load src="./partials/footer.html" />
-
     <script type="module" src="./main.js"></script>
   </body>
 </html>
