--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,9 @@
     <load src="./partials/header.html" />
     <main>
       <load src="./partials/hero.html" />
-      <load src="./partials/about-me.html" />
+      <load src="./partials/background-video.html" />
       <load src="./partials/projects.html" />
+      <load src="./partials/about-me.html" />
       <load src="./partials/tech-skills.html" />
       <load src="./partials/faq.html" />
       <load src="./partials/contacts.html" />
